crates/ruff_python_ast/tests/snapshots/visitor__bytes_literals.snap
---
source: crates/ruff_python_ast/tests/visitor.rs
expression: trace
---
- StmtExpr
  - ExprBytesLiteral
    - BytesLiteral
    - BytesLiteral
    - BytesLiteral

