crates/ruff_python_ast/tests/snapshots/visitor__class_type_parameters.snap
---
source: crates/ruff_python_ast/tests/visitor.rs
expression: trace
---
- StmtClassDef
  - TypeParamTypeVar
    - ExprName
  - TypeParamTypeVar
  - TypeParamTypeVarTuple
  - TypeParamParamSpec
  - StmtExpr
    - ExprEllipsisLiteral

