crates/ruff_python_ast/tests/snapshots/visitor__compare.snap
---
source: crates/ruff_python_ast/tests/visitor.rs
expression: trace
---
- StmtExpr
  - ExprCompare
    - ExprNumberLiteral
    - Lt
    - Lt
    - ExprName
    - ExprNumberLiteral

