crates/ruff_python_ast/tests/snapshots/visitor__decorators.snap
---
source: crates/ruff_python_ast/tests/visitor.rs
expression: trace
---
- StmtFunctionDef
  - ExprName
  - Arguments
  - StmtPass
- StmtClassDef
  - ExprName
  - StmtPass

