crates/ruff_python_ast/tests/snapshots/visitor__dict_comprehension.snap
---
source: crates/ruff_python_ast/tests/visitor.rs
expression: trace
---
- StmtExpr
  - ExprDictComp
    - Comprehension
      - ExprName
      - ExprName
    - ExprName
    - ExprBinOp
      - ExprName
      - Pow
      - ExprNumberLiteral

