crates/ruff_python_ast/tests/snapshots/visitor__f_strings.snap
---
source: crates/ruff_python_ast/tests/visitor.rs
expression: trace
---
- StmtExpr
  - ExprFString
    - StringLiteral
    - ExprStringLiteral
      - StringLiteral
    - ExprFormattedValue
      - ExprName
      - ExprFString
        - ExprStringLiteral
          - StringLiteral
        - ExprFormattedValue
          - ExprName
        - ExprStringLiteral
          - StringLiteral
    - ExprStringLiteral
      - StringLiteral

