crates/ruff_python_ast/tests/snapshots/visitor__function_arguments.snap
---
source: crates/ruff_python_ast/tests/visitor.rs
expression: trace
---
- StmtFunctionDef
  - Arguments
    - ExprConstant
    - ExprConstant
    - ExprConstant
    - Arg
    - Arg
    - Arg
    - Arg
    - Arg
    - Arg
    - Arg
    - Arg
  - StmtPass

