crates/ruff_python_ast/tests/snapshots/visitor__function_positional_only_with_default.snap
---
source: crates/ruff_python_ast/tests/visitor.rs
expression: trace
---
- StmtFunctionDef
  - Arguments
    - ExprConstant
    - ExprConstant
    - Arg
    - Arg
    - Arg
    - Arg
  - StmtPass

