crates/ruff_python_ast/tests/snapshots/visitor__function_type_parameters.snap
---
source: crates/ruff_python_ast/tests/visitor.rs
expression: trace
---
- StmtFunctionDef
  - TypeParamTypeVar
    - ExprName
  - TypeParamTypeVar
  - TypeParamTypeVarTuple
  - TypeParamParamSpec
  - Arguments
  - StmtExpr
    - ExprConstant

