crates/ruff_python_ast/tests/snapshots/visitor__list_comprehension.snap
---
source: crates/ruff_python_ast/tests/visitor.rs
expression: trace
---
- StmtExpr
  - ExprListComp
    - Comprehension
      - ExprName
      - ExprName
    - ExprName

