crates/ruff_python_ast/tests/snapshots/visitor__set_comprehension.snap
---
source: crates/ruff_python_ast/tests/visitor.rs
expression: trace
---
- StmtExpr
  - ExprSetComp
    - Comprehension
      - ExprName
      - ExprName
    - ExprName

